--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <div class="items" id="items">
 
+    </div>
+  </main>
+  <script src="scripts.js" type="module"></script>
 </body>
 </html>
