connect cart to footer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </div>
   </main>
   <footer>
-
+    <div id="cart-quantity"></div>
+    <ul id="item-list"></ul>
+    <div id="cart-total"></div>
   </footer>
   <script src="scripts.js" type="module"></script>
 </body>
