--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,16 @@
   <link rel="stylesheet" href="styles.css">
   <title>Mood Shop</title>
 </head>
+
 <body>
 
   <header class="page-header">
-    <h4>The Mood Shop</h4>
+    <h1>The Mood Shop</h1>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Cart</a></li>
+        <li><a href="#cart">Cart</a></li>
       </ul>
     </nav>
   </header>
@@ -24,11 +26,12 @@
 
     </div>
   </main>
-  <footer>
+  <footer id="cart">
     <div id="cart-quantity"></div>
     <ul id="item-list"></ul>
     <div id="cart-total"></div>
   </footer>
   <script src="scripts.js" type="module"></script>
 </body>
+
 </html>
